# Lume

./: LICENSE  PDFiumConfig.cmake  README.md  README.zh-CN.md  index.html  package-lock.json  package.json  test_pdfium.rs  test_type.rs  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: ai-feature-roadmap.md  build-and-release-guide.md  cli-development-plan.md  zotero-gap-analysis.md
public/i18n/: config.json
public/i18n/locales/: en-US.json  zh-CN.json
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json  test.rs  test_path.rs  test_pdfium.rs
src-tauri/capabilities/: default.json
src-tauri/src/: cli.rs  cli_ipc.rs  db.rs  lib.rs  library_commands.rs  main.rs  metadata_fetch.rs  models.rs  pdf_handlers.rs
src/components/: AnnotationLayer.tsx  ErrorBoundary.tsx  PdfViewer.tsx  SearchBar.tsx  TextLayer.tsx  Toolbar.tsx  pdfCacheRegistry.ts  pdfDocumentRuntime.ts  pdfRuntime.ts
src/components/layout/: AIPanel.tsx  ExportModal.tsx  FolderSidebar.test.tsx  FolderSidebar.tsx  LibraryView.test.tsx  LibraryView.tsx  MetaPanel.tsx  PdfListSidebar.tsx  libraryViewUtils.test.ts  libraryViewUtils.ts
src/components/modals/: SettingsModal.tsx
src/hooks/: useFeedback.tsx  useI18n.tsx  useLibrary.ts  useSettings.tsx
src/test/: setup.ts
src/types/: index.ts
