[package]
name = "Lume"
version = "0.1.0"
description = "Lume"
authors = ["you"]
edition = "2021"
license = "MIT"
default-run = "Lume"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lume_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pdfium-render = "0.8.37"
image = "0.25.9"
tokio = { version = "1.50.0", features = ["full"] }
base64 = "0.22.1"
lazy_static = "1.5.0"
tauri-plugin-dialog = "2"
regex = "1.11.1"
reqwest = { version = "0.12.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
urlencoding = "2.1.3"
rusqlite = { version = "0.38.0", features = ["bundled"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59.0", features = ["Win32_Foundation", "Win32_System_Console"] }

